database yml fix
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@988 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 development:
       host: localhost
       adapter: mysql
-      database: fedena2.1_i18n
+      database: fedena_ultimate
       port: 3306
       username: root
       password: foradian
@@ -17,7 +17,7 @@ test: &test
 production:
       host: localhost
       adapter: mysql
-      database: fedena2.1_i18n
+      database: fedena_ultimate
       port: 3306
       username: root
       password: foradian
