--- a/config/company_details.example.yml
+++ b/config/company_details.example.yml
@@ -1,3 +1,3 @@
 company_details:
- name: "Fedena"
- url: "http://www.foradian.com/"
+ company_name: "Fedena123"
+ company_url: "http://www.foradian.com/"
