access method to sms settings yml changed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3020 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/sms_settings.yml.example
+++ b/config/sms_settings.yml.example
@@ -4,3 +4,14 @@ sms_settings:
  sendername: sender
  host_url: http://yoursmsprovider.com/api
  success_code: "success"
+
+parameter_mappings:
+ username: username
+ password: password
+ sendername: sendername
+ message: message
+ phone: phone
+
+# Additional parameters to be added should given in the format "param1=value1&param2=value2&..."
+additional_parameters: ""
+ 
