--- a/config/database.yml
+++ b/config/database.yml
@@ -1,20 +1,17 @@
 development:
-  adapter: postgresql
-  encoding: unicode
+  adapter: mysql
   host: localhost
   database: fedena_development
   pool: 5
 
 test: &test
-  adapter: postgresql
-  encoding: unicode
+  adapter: mysql
   host: localhost
   database: fedena_test
   pool: 5
 
 production:
-  adapter: postgresql
-  encoding: unicode
+  adapter: mysql
   host: localhost
   database: fedena_production
   pool: 5
