Hook codeclimate and TravisCI

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,8 @@ script:
 before_script:
   - gem update --system 1.8.25
   - cp config/database.travis.yml config/database.yml
+addons:
+  code_climate:
+    repo_token: 025bcf02e070a831bd107a2cd72bb110c6086ee114560a8cfcb128d0ccc7bae0
 rvm:
   - 1.9.3
